# surrealdb-macros

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/macros/: mod.rs
src/macros/sql/: kw.rs  mod.rs  query.rs
src/macros/sql/statements/: begin.rs  cancel.rs  commit.rs  info.rs  kill.rs  mod.rs  option.rs  remove.rs  yuse.rs
src/macros/sql/statements/begin/: mod.rs
src/macros/sql/statements/cancel/: mod.rs
src/macros/sql/statements/commit/: mod.rs
src/macros/sql/statements/info/: mod.rs
src/macros/sql/statements/kill/: mod.rs
src/macros/sql/statements/option/: mod.rs
src/macros/sql/statements/remove/: database.rs  event.rs  field.rs  index.rs  login.rs  mod.rs  namespace.rs  param.rs  scope.rs  table.rs  token.rs  user.rs
src/macros/sql/statements/yuse/: mod.rs
tests/: begin.rs  cancel.rs  commit.rs  info.rs  kill.rs  option.rs  remove.rs  yuse.rs
