[package]
name = "surrealdb-macros"
publish = true
edition = "2021"
version = "0.0.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "Private implementation of function macros for surrealdb"
homepage = "https://github.com/surrealdb/surrealdb-macros"
repository = "https://github.com/surrealdb/surrealdb-macros"
keywords = ["surrealdb", "surreal", "database", "macro"]
license = "MIT"
