[package]
name = "surrealdb-macros"
publish = true
edition = "2021"
version = "0.0.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "Private implementation of function macros for surrealdb"
homepage = "https://github.com/surrealdb/surrealdb-macros"
repository = "https://github.com/surrealdb/surrealdb-macros"
keywords = ["surrealdb", "surreal", "database", "macro"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["parsing"] }
uuid = "1.2.2"

[dev-dependencies]
surrealdb = { version = "1.0.0-beta.8", default-features = false, features = ["kv-mem"] }
