[package]
name = "surrealdb-macros"
publish = true
edition = "2021"
version = "0.0.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "Private implementation of function macros for surrealdb"
homepage = "https://github.com/surrealdb/surrealdb-macros"
repository = "https://github.com/surrealdb/surrealdb-macros"
keywords = ["surrealdb", "surreal", "database", "macro"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
quote = "1"
rust_decimal = "1"
syn = { version = "1", features = ["parsing"] }
uuid = "1"

[dev-dependencies]
surrealdb = { version = "1", default-features = false, features = ["kv-mem"] }
